# quadrotor_auto_land

./: README.md
auto_land/: CMakeLists.txt  package.xml
auto_land/src/: auto_land.cpp
detect_points/: CMakeLists.txt  package.xml
detect_points/include/detect_points/: detect_points.h
detect_points/src/: detect_points.cpp  detect_points_node.cpp
libuvc_ros/libuvc_camera/: CMakeLists.txt
libuvc_ros/libuvc_camera/launch/: libuvc_camera.launch
libuvc_ros/libuvc_ros/: CMakeLists.txt
models/land_mark/: model.config  model.sdf
models/land_mark/materials/scripts/: land_mark.material
models/pattern/: model.config  model.sdf
models/pattern/materials/scripts/: pattern.material
offboard/: CMakeLists.txt  package.xml
offboard/src/: offboard_node.cpp
rviz_simulation/: CMakeLists.txt  package.xml
rviz_simulation/include/rviz_simulation/: rviz_simulation.h
rviz_simulation/src/: rviz_simulation.cpp  rviz_simulation_node.cpp
world/: calibration  land
