<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rviz_simulation</name>
  <version>0.5.1</version>
  <description>EDVS Pose Rviz Simulation Nodes For ROS.</description>
  <maintainer email="1059074199@qq.com">Allen</maintainer>
  <license>Apache License 2.0</license>
  <author>Allen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>tf</exec_depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
